# Minecrap

./: .gitignore  CMakeLists.txt  LICENSE  Minecrap.sln  README.md
Minecrap/: AABB.cpp  AABB.h  BlockData.cpp  BlockData.h  Filesystem.cpp  Filesystem.h  Input.cpp  Mesher.h  Minecrap.vcxproj  Minecrap.vcxproj.filters  NaiveMesher.cpp  Player.cpp  Player.h  PublicData.h  Ray.h  Shader.h  ShaderManager.h  ShaderProgram.cpp  Texture.h  TextureDictionary.cpp  TextureDictionary.h  World.cpp  World.h  WorldRenderMesh.cpp  WorldRenderMesh.h  glad.c  glad.h  main.cpp
Minecrap/buildinc/: aabb.fs  blocks
asset/: 2d.vs  aabb.vs  block.fs  block.vs  text.fs  text.vs
cmakemodules/: copy_assets.cmake
include/: AABB.h  Element2D.h  Engine.h  EngineVitals.h  FileSystem.h  Filesystem.h  Font.h  FontManager.h  Graphics.h  Input.h  Mesher.h  NaiveMesher.h  OpenGLW.h  Player.h  RenderMesh.h  Renderer2D.h  Renderer3D.h  Shader.h  ShaderManager.h  ShaderProgram.h  SpriteElement2D.h  TextElement2D.h  Texture.h  TextureDictionary.h  World.h  WorldRenderMesh.h
src/: AABB.cpp  BlockData.cpp  Element2D.cpp  Engine.cpp  EngineVitals.cpp  FileSystem.cpp  Filesystem.cpp  Font.cpp  FontManager.cpp  Graphics.cpp  Input.cpp  Mesher.cpp  NaiveMesher.cpp  Player.cpp  Ray.cpp  RenderMesh.cpp  Renderer2D.cpp  Renderer3D.cpp  Shader.cpp  ShaderManager.cpp  ShaderProgram.cpp  SpriteElement2D.cpp  TextElement2D.cpp  Texture.cpp  TextureDictionary.cpp  World.cpp  main.cpp
